Finalisation de la lib lcd attente validation pour merge avec master !

--- a/libs/makefile
+++ b/libs/makefile
@@ -8,13 +8,13 @@ CFLAGS = -Wall -fPIC -I../include -I../data/gpio/include
 OBJDIR = ../build
 LIBDIR = ../data/gpio/lib
 
-SRCS = 7seg.c rfid.c lcd.c  # ajouter ici d'autres fichiers sources au besoin
+SRCS = 7seg.c rfid.c lcd_custom.c  # ajouter ici d'autres fichiers sources au besoin
 OBJS = $(SRCS:%.c=$(OBJDIR)/%.o)
 TARGETS = $(SRCS:%.c=$(LIBDIR)/lib%.so)
 
 LDFLAGS = -L../data/gpio/lib -lwiringPi -lwiringPiDev
 
-all: lib7seg.so librfid.so liblcd.so
+all: lib7seg.so liblcd_custom.so
 
 lib7seg.so: $(OBJDIR)/7seg.o | $(LIBDIR)
 	$(CC) -shared -o $(LIBDIR)/lib7seg.so $< $(LDFLAGS)
@@ -22,8 +22,8 @@ lib7seg.so: $(OBJDIR)/7seg.o | $(LIBDIR)
 librfid.so: $(OBJDIR)/rfid.o | $(LIBDIR)
 	$(CC) -shared -o $(LIBDIR)/librfid.so $< $(LDFLAGS)
 
-liblcd.so: $(OBJDIR)/lcd.o | $(LIBDIR)
-	$(CC) -shared -o $(LIBDIR)/liblcd.so $< $(LDFLAGS)
+liblcd_custom.so: $(OBJDIR)/lcd_custom.o | $(LIBDIR)
+	$(CC) -shared -o $(LIBDIR)/liblcd_custom.so $< $(LDFLAGS)
 
 $(OBJDIR)/%.o: %.c | $(OBJDIR)
 	$(CC) $(CFLAGS) -c $< -o $@
@@ -35,11 +35,11 @@ $(LIBDIR):
 	mkdir -p $@
 
 SSHPASS = sshpass -p 'raspberry'
-upload:
-	$(SSHPASS) scp ../data/gpio/lib/lib7seg.so pi@$(ADDRPI):/home/pi/Desktop/lib/
+upload: all
+	$(SSHPASS) scp ../data/gpio/lib/* pi@$(ADDRPI):/home/pi/Desktop/lib/
 
 
 clean:
 	rm -f $(OBJS)
-	rm -f $(LIBDIR)/liblcd.so $(LIBDIR)/lib7seg.so $(LIBDIR)/librfid.so
+	rm -f $(LIBDIR)/liblcd_custom.so $(LIBDIR)/lib7seg.so $(LIBDIR)/librfid.so
 
