first commit - test RFID - test 7 SEG - test LCD
ATTENTE MERGE MATRICELED

--- a/libs/makefile
+++ b/libs/makefile
@@ -1,5 +1,5 @@
 # ADRESSE IP DU RASPI
-ADDRPI = 192.168.1.3
+ADDRPI = 172.20.10.12
 
 # Compilateur croisé
 CC = ../data/tools-master/arm-bcm2708/gcc-linaro-arm-linux-gnueabihf-raspbian-x64/bin/arm-linux-gnueabihf-gcc
@@ -8,13 +8,13 @@ CFLAGS = -Wall -fPIC -I../include -I../data/gpio/include
 OBJDIR = ../build
 LIBDIR = ../data/gpio/lib
 
-SRCS = 7seg.c rfid.c lcd.c  # ajouter ici d'autres fichiers sources au besoin
+SRCS = 7seg.c rfid.c lcd.c matrice.c  # ajouter ici d'autres fichiers sources au besoin
 OBJS = $(SRCS:%.c=$(OBJDIR)/%.o)
 TARGETS = $(SRCS:%.c=$(LIBDIR)/lib%.so)
 
 LDFLAGS = -L../data/gpio/lib -lwiringPi -lwiringPiDev
 
-all: lib7seg.so librfid.so liblcd.so
+all: libmatrice.so
 
 lib7seg.so: $(OBJDIR)/7seg.o | $(LIBDIR)
 	$(CC) -shared -o $(LIBDIR)/lib7seg.so $< $(LDFLAGS)
@@ -24,6 +24,9 @@ librfid.so: $(OBJDIR)/rfid.o | $(LIBDIR)
 
 liblcd.so: $(OBJDIR)/lcd.o | $(LIBDIR)
 	$(CC) -shared -o $(LIBDIR)/liblcd.so $< $(LDFLAGS)
+
+libmatrice.so: $(OBJDIR)/matrice.o | $(LIBDIR)
+	$(CC) -shared -o $(LIBDIR)/libmatrice.so $< $(LDFLAGS)
 
 $(OBJDIR)/%.o: %.c | $(OBJDIR)
 	$(CC) $(CFLAGS) -c $< -o $@
@@ -36,9 +39,8 @@ $(LIBDIR):
 
 SSHPASS = sshpass -p 'raspberry'
 upload:
-	$(SSHPASS) scp ../data/gpio/lib/lib7seg.so pi@$(ADDRPI):/home/pi/Desktop/lib/
-	$(SSHPASS) scp ../data/gpio/lib/librfid.so pi@$(ADDRPI):/home/pi/Desktop/lib/
+	$(SSHPASS) scp ../data/gpio/lib/* pi@$(ADDRPI):/home/pi/Desktop/lib/
 clean:
 	rm -f $(OBJS)
-	rm -f $(LIBDIR)/liblcd.so $(LIBDIR)/lib7seg.so $(LIBDIR)/librfid.so
+	rm -f $(LIBDIR)/liblcd.so $(LIBDIR)/lib7seg.so $(LIBDIR)/librfid.so $(LIBDIR)/libmatrice.so
 
