--- a/src/test_unitaires/makefile
+++ b/src/test_unitaires/makefile
@@ -1,5 +1,5 @@
 # ADRESSE IP DU RASPI
-ADDRPI = 172.20.10.4
+ADDRPI = 172.20.10.12
 
 # Répertoires
 SRC_DIR = .
@@ -12,7 +12,7 @@ CC = ../../data/tools-master/arm-bcm2708/gcc-linaro-arm-linux-gnueabihf-raspbian
 
 # Options de compilation
 CFLAGS = -I$(INCLUDE_DIR) -I../../include
-LDFLAGS = -L$(LIB_DIR) -l7seg -lwiringPi -lwiringPiDev
+LDFLAGS = -L$(LIB_DIR) -l7seg -lwiringPi -lwiringPiDev -lmatrice
 
 # Fichiers sources de test
 SEGMENT_SRC = $(SRC_DIR)/test_7segments.c
@@ -27,13 +27,17 @@ RFID_BIN = $(BIN_DIR)/test_rfid
 LIB7SEG_SRC = $(SRC_DIR)/test_lib_7seg.c
 LIB7SEG_BIN = $(BIN_DIR)/test_lib_7seg
 
+MATRICE_SRC = $(SRC_DIR)/test_matrice.c
+MATRICE_BIN = $(BIN_DIR)/test_matrice
+
 # Règles principales
-all: segment lcd rfid lib7seg
+all: segment lcd rfid lib7seg matrice
 
 segment: $(SEGMENT_BIN)
 lcd: $(LCD_BIN)
 rfid: $(RFID_BIN)
 lib7seg: $(LIB7SEG_BIN)
+matrice: $(MATRICE_BIN)
 
 $(SEGMENT_BIN): $(SEGMENT_SRC) | $(BIN_DIR)
 	$(CC) $(CFLAGS) -o $@ $< $(LDFLAGS)
@@ -47,6 +51,9 @@ $(RFID_BIN): $(RFID_SRC) | $(BIN_DIR)
 $(LIB7SEG_BIN): $(LIB7SEG_SRC) | $(BIN_DIR)
 	$(CC) $(CFLAGS) -o $@ $< $(LDFLAGS)
 
+$(MATRICE_BIN): $(MATRICE_SRC) | $(BIN_DIR)
+	$(CC) $(CFLAGS) -o $@ $< $(LDFLAGS)
+
 $(BIN_DIR):
 	mkdir -p $@
 
@@ -57,4 +64,4 @@ upload: all
 clean:
 	rm -f $(BIN_DIR)/test_*
 
-.PHONY: all clean upload segment lcd rfid lib7seg
+.PHONY: all clean upload segment lcd rfid lib7seg matrice
