--- a/libs/makefile
+++ b/libs/makefile
@@ -3,19 +3,21 @@ ADDRPI = 192.168.1.3
 
 # Compilateur croisé
 CC = ../data/tools-master/arm-bcm2708/gcc-linaro-arm-linux-gnueabihf-raspbian-x64/bin/arm-linux-gnueabihf-gcc
-
-CFLAGS = -Wall -fPIC -I../include -I../data/gpio/include
+CFLAGS = -fPIC -I../include -I../data/gpio/include
 OBJDIR = ../build
 LIBDIR = ../data/gpio/lib
 
-SRCS = 7seg.c rfid.c lcd.c  # ajouter ici d'autres fichiers sources au besoin
+# Sources originales
+SRCS = 7seg.c rfid.c lcd.c
+
 OBJS = $(SRCS:%.c=$(OBJDIR)/%.o)
 TARGETS = $(SRCS:%.c=$(LIBDIR)/lib%.so)
-
 LDFLAGS = -L../data/gpio/lib -lwiringPi -lwiringPiDev
 
-all: lib7seg.so librfid.so liblcd.so
+# Cibles principales (ajout de libcardjitsu.so)
+all: lib7seg.so librfid.so liblcd.so libcardjitsu.so
 
+# Règles existantes
 lib7seg.so: $(OBJDIR)/7seg.o | $(LIBDIR)
 	$(CC) -shared -o $(LIBDIR)/lib7seg.so $< $(LDFLAGS)
 
@@ -25,20 +27,28 @@ librfid.so: $(OBJDIR)/rfid.o | $(LIBDIR)
 liblcd.so: $(OBJDIR)/lcd.o | $(LIBDIR)
 	$(CC) -shared -o $(LIBDIR)/liblcd.so $< $(LDFLAGS)
 
+# Compilation des objets
 $(OBJDIR)/%.o: %.c | $(OBJDIR)
 	$(CC) $(CFLAGS) -c $< -o $@
 
+# Création des répertoires
 $(OBJDIR):
 	mkdir -p $@
 
 $(LIBDIR):
 	mkdir -p $@
 
+# SSH pour upload
 SSHPASS = sshpass -p 'raspberry'
-upload:
+
+# Upload
+upload: all
 	$(SSHPASS) scp ../data/gpio/lib/lib7seg.so pi@$(ADDRPI):/home/pi/Desktop/lib/
 	$(SSHPASS) scp ../data/gpio/lib/librfid.so pi@$(ADDRPI):/home/pi/Desktop/lib/
+	$(SSHPASS) scp ../data/gpio/lib/libcardjitsu.so pi@$(ADDRPI):/home/pi/Desktop/lib/
+
+# Nettoyage étendu
 clean:
 	rm -f $(OBJS)
-	rm -f $(LIBDIR)/liblcd.so $(LIBDIR)/lib7seg.so $(LIBDIR)/librfid.so
-
+	rm -f $(LIBDIR)/liblcd.so $(LIBDIR)/lib7seg.so $(LIBDIR)/librfid.so $(LIBDIR)/libcardjitsu.so
+	rm -f test_rfid test_cardjitsu test_quick
