connexion OK, ajout creation et gestion partie à tester !

--- a/libs/makefile
+++ b/libs/makefile
@@ -1,5 +1,5 @@
 # ADRESSE IP DU RASPI
-ADDRPI = 172.20.10.6
+ADDRPI = 172.20.10.4
 ADDRPISRV = 172.20.10.2
 # Compilateur croisé
 CC = ../data/tools-master/arm-bcm2708/gcc-linaro-arm-linux-gnueabihf-raspbian-x64/bin/arm-linux-gnueabihf-gcc
@@ -8,13 +8,13 @@ CFLAGS = -Wall -fPIC -I../include -I../data/gpio/include
 OBJDIR = ../build
 LIBDIR = ../data/gpio/lib
 
-SRCS = 7seg.c rfid.c lcd_custom.c matrice.c data.c socket_utils.c gameplay.c protocole.c # ajouter ici d'autres fichiers sources au besoin
+SRCS = 7seg.c rfid.c lcd_custom.c matrice.c data.c socket_utils.c gameplay.c protocole.c  IHM.c# ajouter ici d'autres fichiers sources au besoin
 OBJS = $(SRCS:%.c=$(OBJDIR)/%.o)
 TARGETS = $(SRCS:%.c=$(LIBDIR)/lib%.so)
 
 LDFLAGS = -L../data/gpio/lib -lwiringPi -lwiringPiDev
 
-all: libdata.so lib7seg.so liblcd_custom.so libmatrice.so librfid.so libsocket.so libgameplay.so libprotocole.so
+all: libdata.so lib7seg.so liblcd_custom.so libmatrice.so librfid.so libsocket.so libgameplay.so libprotocole.so libihm.so
 
 # Règles existantes
 libdata.so: $(OBJDIR)/data.o | $(LIBDIR)
@@ -41,6 +41,9 @@ libgameplay.so: $(OBJDIR)/gameplay.o | $(LIBDIR)
 libprotocole.so: $(OBJDIR)/protocole.o | $(LIBDIR)
 	$(CC) -shared -o $(LIBDIR)/libprotocole.so $< $(LDFLAGS)
 
+libihm.so: $(OBJDIR)/IHM.o | $(LIBDIR)
+	$(CC) -shared -o $(LIBDIR)/libihm.so $< $(LDFLAGS)
+
 # Compilation des objets
 $(OBJDIR)/%.o: %.c | $(OBJDIR)
 	$(CC) $(CFLAGS) -c $< -o $@
@@ -61,5 +64,5 @@ uploadsrv: all
 
 clean:
 	rm -f $(OBJS)
-	rm -f $(LIBDIR)/liblcd_custom.so $(LIBDIR)/lib7seg.so $(LIBDIR)/librfid.so $(LIBDIR)/libmatrice.so $(LIBDIR)/libcardjitsu.so
-
+	rm -f $(LIBDIR)/liblcd_custom.so $(LIBDIR)/lib7seg.so $(LIBDIR)/librfid.so $(LIBDIR)/libmatrice.so
+	rm -f $(LIBDIR)/libcardjitsu.so $(LIBDIR)/libprotocole.so $(LIBDIR)/libsocket.so $(LIBDIR)/libihm.so
